fix: mobile landing page not responsive

--- a/packages/nyris-webapp/src/components/appMobile.scss
+++ b/packages/nyris-webapp/src/components/appMobile.scss
@@ -20,12 +20,14 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
-    height: 100vh;
+    // height: calc(100vh);
     background-color: #fafafa;
     // min-height: -webkit-fill-available;
     .box-header-mobile-main {
       // min-height: 60px;
+      z-index: 100;
       border-bottom: 1px solid #e9e9ec;
       background-color: #fff;
       display: flex;
@@ -103,6 +105,10 @@
       }
     }
     .box-body-mobile-wrap-main {
+      position: fixed;
+      bottom: 64px;
+      padding-top: 110px;
+      scroll-padding-top: 110px;
       height: 100%;
       display: flex;
       width: 100%;
@@ -242,7 +248,16 @@
       }
     }
     .footer-wrap-main {
+      position: fixed;
+      bottom: 0;
       height: 64px;
+      flex: 1 1 auto;
+      width: 100%;
+      padding: 0;
+      padding-top: 0px;
+      padding-right: 0px;
+      padding-bottom: 0px;
+      padding-left: 0px;
       border-top: 1px solid #e9e9ec;
       background-color: #fff;
       z-index: 11;
